archive/nell/apps/etc/my-spotify/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-spotify
  namespace: etc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "spotify.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: your-spotify-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "spotify.${SECRET_DOMAIN}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-spotify-backend
  namespace: etc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "spotify-backend.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: your-spotify-backend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "spotify-backend.${SECRET_DOMAIN}"
